<resources>
    <string name="app_name">Xchange</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="user_email_com">User@email.com</string>
    <string name="new_user">New User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>